--- a/tables.html
+++ b/tables.html
@@ -91,14 +91,14 @@
                 <p class="btn_catalog"><a href="kitchens.html">Кухни</a></p>
               </div>
               <div class="catalog_list">
-               <p class="btn_catalog active">столовые группы</p>
+               <p class="btn_catalog active">столовые группы<span class="caret_span"><img src="img/arrow.png"></span></p>
                 <div class="list_nav">
                   <p class="list-item active"><a href="tables.html">столы</a></p>
                   <p class="list-item"><a href="tables.html">стулья</a></p>
                 </div>
               </div>
               <div class="catalog_list">
-                <p class="btn_catalog">Комплектующие</p>
+                <p class="btn_catalog">Комплектующие<span class="caret_span"><img src="img/arrow.png"></span></p>
                 <div class="list_nav">
                  <p class="list-item"><a href="tables.html">Что-то 1</a></p>
                  <p class="list-item"><a href="tables.html">Что-то 2</a></p>
