--- a/o_salone.html
+++ b/o_salone.html
@@ -92,49 +92,49 @@
         <article class="o_salone_article">
           <div class="article_img_wrapper"><img src="img/grand.png"></div>
           <h1>Салон-студия "Гранд"</h1>
-          <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odieum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+          <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illm iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
           <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
         </article>
 
         <div class="gallery row">
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
             <div class="img_gallery_wrapper">
-              <img src="img/o_salone.jpg">
+              <a href="img/slide1.jpg" class="fancy_picture" rel="gallery" title="Sample title 1"><img src="img/slide1.jpg"></a>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
             <div class="img_gallery_wrapper">
-              <img src="img/o_salone.jpg">
+               <a href="img/slide2.jpg" class="fancy_picture" rel="gallery" title="Sample title 1"><img src="img/slide2.jpg"></a>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
             <div class="img_gallery_wrapper">
-              <img src="img/o_salone.jpg">
+              <a href="img/slide1.jpg" class="fancy_picture" rel="gallery" title="Sample title 1"><img src="img/slide1.jpg"></a>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
             <div class="img_gallery_wrapper">
-              <img src="img/o_salone.jpg">
+               <a href="img/slide2.jpg" class="fancy_picture" rel="gallery" title="Sample title 1"><img src="img/slide2.jpg"></a>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
             <div class="img_gallery_wrapper">
-              <img src="img/o_salone.jpg">
+               <a href="img/slide2.jpg" class="fancy_picture" rel="gallery" title="Sample title 1"><img src="img/slide2.jpg"></a>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
             <div class="img_gallery_wrapper">
-              <img src="img/o_salone.jpg">
+              <a href="img/slide1.jpg" class="fancy_picture" rel="gallery" title="Sample title 1"><img src="img/slide1.jpg"></a>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
             <div class="img_gallery_wrapper">
-              <img src="img/o_salone.jpg">
+               <a href="img/slide2.jpg" class="fancy_picture" rel="gallery" title="Sample title 1"><img src="img/slide2.jpg"></a>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
             <div class="img_gallery_wrapper">
-              <img src="img/o_salone.jpg">
+               <a href="img/slide1.jpg" class="fancy_picture" rel="gallery" title="Sample title 1"><img src="img/slide1.jpg"></a>
             </div>
           </div>
         </div> <!-- end gallery row -->
@@ -145,7 +145,10 @@
               <address>
                 <h2>Салон-студия "Гранд"</h2>
                 <p><strong>Адрес: </strong>ТЦ "Grad", 3-й этаж, пав. 367</p>
-                <p class="links"><a href="#">На карте</a><a href="#">Схема проезда</a></p>
+                <p class="links">
+                  <a href="#mapmodals" data-toggle="modal" role="button">На карте</a> 
+                  <a type="button" class="btn btn-default" data-toggle="modal" data-target="#MapScheme">Схема проезда</a>
+                </p>
                 <p class="time"><strong>Время работы:</strong> 10.00 - 17.00</p>
                 <p class="weekend"><strong>Выходной</strong>: понедельник</p>
                 <p><strong>Телефон / факс:</strong> <a href="tel:+375172596461">+375 (17) 259-64-61</a></p>
@@ -153,7 +156,7 @@
               </address>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-6 col-xs-12">
-              <div class="image_wrapper_document"><img src="img/document.jpg"></div>
+              <div class="image_wrapper_document"><a class="fancy_doc" rel="doc" href="img/document.jpg"><img src="img/document.jpg"></a></div>
             </div>
           </div>
         </article>
@@ -201,13 +204,56 @@
     </div> <!-- end wrapper -->
   </div><!--  end container -->
 
+
+
+<!-- Modal with the path -->
+<div class="modal fade" id="MapScheme" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <img src="img/slide2.jpg">
+    </div>
+  </div>
+</div>
+
+<!-- Modal with the map-->
+  <div class="modal fade" id="mapmodals">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div id="map-container"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="close" data-dismiss="modal">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/jquery.js"></script>
+<!-- <script type="text/javascript" src="js/jquery.js"></script> -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
 <script type="text/javascript" src="js/jcarousel.responsive.js"></script>
+<!-- <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script> -->
+
+<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+<script type="text/javascript" src="fancybox/jquery.fancybox.js"></script>
+<link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="fancybox/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+<script type="text/javascript" src="fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+<script type="text/javascript" src="fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+<link rel="stylesheet" href="fancybox/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+<script type="text/javascript" src="fancybox/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
