--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/carousel.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet">
+  <script type="text/javascript" src="js/html5shiv.js"></script>
+  <script type="text/javascript" src="js/html5shiv-printshiv.js"></script>
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
   <script type="text/javascript" src="js/jcarousel.responsive.js"></script>
@@ -32,11 +34,7 @@
         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 text-right">
           <address class="address">
             <p><strong>Адрес:</strong> <b>ТЦ "Grad", 3-й этаж, пав. 367</b></p>
-<<<<<<< HEAD
             <p><a type="button" class="link_schema" data-toggle="modal" data-target="#MapScheme">Схема проезда</a> </p>
-=======
-            <p><a href="#mapmodals" data-toggle="modal" role="button">Карта проезда</a> </p>
->>>>>>> 896a34d3cd46f3f1fecbb052d368ffb2ef3369a5
             <p><strong>Время работы:</strong> 10.00 - 17.00</p>
             <p><strong>Выходной</strong>: понедельник</p>
           </address>
@@ -102,17 +100,10 @@
           </div>
         </div>
         <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-<<<<<<< HEAD
           <span> <img src="img/arrow_left_l.png"> </span>
         </a>
         <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
           <span> <img src="img/arrow_right_l.png"> </span>
-=======
-          <span> < </span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span> > </span>
->>>>>>> 896a34d3cd46f3f1fecbb052d368ffb2ef3369a5
         </a>
       </div>
 
@@ -172,13 +163,9 @@
               </ul>
           </div>
 
-<<<<<<< HEAD
           <a href="#" class="jcarousel1-control-prev"><img src="img/arrow_left_ll.png"></a>
           <a href="#" class="jcarousel1-control-next"><img src="img/arrow_right_ll.png"></a>
-=======
-          <a href="#" class="jcarousel1-control-prev">&lsaquo;</a>
-          <a href="#" class="jcarousel1-control-next">&rsaquo;</a>
->>>>>>> 896a34d3cd46f3f1fecbb052d368ffb2ef3369a5
+
       </div>
       </div>
 
@@ -263,6 +250,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/html5shiv.js"></script>
+<script type="text/javascript" src="js/html5shiv-printshiv.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
