--- a/o_fabrike.html
+++ b/o_fabrike.html
@@ -8,6 +8,8 @@
   <meta name="description" content="" />
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <script type="text/javascript" src="js/html5shiv.js"></script>
+  <script type="text/javascript" src="js/html5shiv-printshiv.js"></script>
 </head>
 <body>
   <div class="container">
