--- a/product.html
+++ b/product.html
@@ -9,6 +9,8 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/carousel.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet">
+  <script type="text/javascript" src="js/html5shiv.js"></script>
+  <script type="text/javascript" src="js/html5shiv-printshiv.js"></script>
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
   <script type="text/javascript" src="js/jcarousel.responsive.js"></script>
@@ -152,20 +154,11 @@
                          
                       </ul>
                   </div>
-
-<<<<<<< HEAD
                   <a href="#" class="jcarousel_p-control-prev"><img src="img/arrow_l_little.png"></a>
                   <a href="#" class="jcarousel_p-control-next"><img src="img/arrow_r_little.png"></a>
                 </div>
               </div>
               <div class="col-lg-6 col-md-6 main_product_description">
-=======
-                  <a href="#" class="jcarousel_p-control-prev">&lsaquo;</a>
-                  <a href="#" class="jcarousel_p-control-next">&rsaquo;</a>
-                </div>
-              </div>
-              <div class="col-lg-6 col-md-6">
->>>>>>> 896a34d3cd46f3f1fecbb052d368ffb2ef3369a5
                 <h1>Кухня Roso</h1>
                 <p class="main_price"><strong>5 000 900</strong> бел.руб.</p>
                 <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odieum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
@@ -254,7 +247,6 @@
     </div> <!-- end wrapper -->
   </div><!--  end container -->
 
-<<<<<<< HEAD
 <!-- Modal with the path -->
 <div class="modal fade" id="MapScheme" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -264,9 +256,6 @@
     </div>
   </div>
 </div>
-
-=======
->>>>>>> 896a34d3cd46f3f1fecbb052d368ffb2ef3369a5
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
