--- a/where_to_buy.html
+++ b/where_to_buy.html
@@ -8,6 +8,8 @@
   <meta name="description" content="" />
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <script type="text/javascript" src="js/html5shiv.js"></script>
+  <script type="text/javascript" src="js/html5shiv-printshiv.js"></script>
 </head>
 <body>
   <div class="container">
@@ -28,11 +30,7 @@
         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 text-right">
           <address class="address">
             <p><strong>Адрес:</strong> <b>ТЦ "Grad", 3-й этаж, пав. 367</b></p>
-<<<<<<< HEAD
             <p><a type="button" class="link_schema" data-toggle="modal" data-target="#MapScheme">Схема проезда</a> </p>
-=======
-            <p><a href="#mapmodals" data-toggle="modal" role="button">Карта проезда</a> </p>
->>>>>>> 896a34d3cd46f3f1fecbb052d368ffb2ef3369a5
             <p><strong>Время работы:</strong> 10.00 - 17.00</p>
             <p><strong>Выходной</strong>: понедельник</p>
           </address>
