--- a/o_salone.html
+++ b/o_salone.html
@@ -159,7 +159,7 @@
                 <p><strong>Адрес: </strong>ТЦ "Grad", 3-й этаж, пав. 367</p>
                 <p class="links">
                   <a href="#mapmodals" data-toggle="modal" role="button">На карте</a> 
-                  <a href="img/schema.jpg" class="fancy_picture" rel="schema" title="Как  нас найти">Схема этажа</a>
+                  <a href="img/schema.jpg" class="fancy_picture" rel="schema2" title="Как  нас найти">Схема этажа</a>
                 </p>
                 <p class="time"><strong>Время работы:</strong> 10.00 - 17.00</p>
                 <p class="weekend"><strong>Выходной</strong>: понедельник</p>
@@ -181,7 +181,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="kitchens.html">Каталог</a></li>
                 <li><a href="o_fabrike.html">О фабрике</a></li>         
                 <li><a href="o_salone.html">О салоне</a></li>
                 <li><a href="brands.html">Бренды</a></li>
@@ -222,9 +222,9 @@
   <div class="modal fade" id="mapmodals">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <div class="modal-header">
+       
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        </div>
+      
         <div class="modal-body">
           <div id="map-container"></div>
         </div>
