--- a/where_to_buy.html
+++ b/where_to_buy.html
@@ -125,7 +125,7 @@
                 <p><strong>Адрес: </strong>ТЦ "Grad", 3-й этаж, пав. 367</p>
                 <p class="links">
                   <a href="#mapmodals" data-toggle="modal" role="button">На карте</a> 
-                  <a href="img/schema.jpg" class="fancy_picture" rel="schema" title="Как  нас найти">Схема этажа</a>
+                  <a href="img/schema.jpg" class="fancy_picture" rel="schema_on_page" title="Как  нас найти">Схема этажа</a>
                 </p>
                 <p class="time"><strong>Время работы:</strong> 10.00 - 17.00</p>
                 <p class="weekend"><strong>Выходной</strong>: понедельник</p>
@@ -145,7 +145,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="kitchens.html">Каталог</a></li>
                 <li><a href="o_fabrike.html">О фабрике</a></li>         
                 <li><a href="o_salone.html">О салоне</a></li>
                 <li><a href="brands.html">Бренды</a></li>
