--- a/brands.html
+++ b/brands.html
@@ -105,7 +105,7 @@
             </div>
             <p>Группа компаний <strong>Teka</strong> является одним из ведущих производителей высококачественной встроенной кухонной техники, моек и смесителей. Производства располагаются в Европе, Америке и Азии, а сеть продаж охватывает всю планету.</p>
             <p>Опыт компании Teka насчитывает свыше 90 лет.  Компания Teka входит в десятку крупнейших производителей техники для кухни в Европе. </p>
-            <a href="http://www.teka.by/">www.teka.by</a>
+            <a href="http://www.teka.by/" rel="nofollow">www.teka.by</a>
           </article>
 
           <article>
@@ -116,7 +116,7 @@
              <p>Technistone – это плотный, твердый, непористый, как внутри, так и на поверхности, композитный материал.</p>
              <p>Technistone создан на основе исключительно твердых природных компонентов – кварца или гранита. Частицы природного камня соединены между собой при помощи уникальной технологии Bretonstone®. Материал является экологически чистым. Содержание природных компонентов составляет 90-93% в зависимости от типа материала.</p>
             <p>Разнообразие цветовой гаммы достигается добавлением цветовых пигментов, крошки стекла или зеркала. Technistone  изготавливается в виде крупногабаритных плит, имеющих глянцевую или шелковисто-матовую поверхность, или поверхность "под старину"</p>
-            <a href="http://www.technistone.com/en/home-page-2?scroll=true">www.technistone.com</a>
+            <a href="http://www.technistone.com/en/home-page-2?scroll=true" rel="nofollow">www.technistone.com</a>
           </article>
 
           <article>
@@ -124,7 +124,7 @@
               <img src="img/brand3.gif">
             </div>
             <p>Компания <strong>BLANCO</strong>, признанный лидер по производству высококачественного оборудования для кухни, была основана в 1925 году. Продукция компании широко известна благодаря превосходному качеству исполнения, инновационным материалам и совершенному дизайну. Сегодня мойки, смесители и мусорные системы BLANCO представлены в более чем 100 странах мира и являются образцом качества, функциональности, изысканного стиля и высокого профессионализма.</p>
-            <a href="http://www.blanco-germany.com/ru/ru/home.html">www.blanco-germany.com</a>
+            <a href="http://www.blanco-germany.com/ru/ru/home.html" rel="nofollow">www.blanco-germany.com</a>
           </article>
 
           <article>
@@ -134,7 +134,7 @@
             <p><strong>KESSEBÖHMER GmbH</strong>, – мирового лидера по производству аксессуаров для кухонь, ванных комнат и шкафов. Современные оборудование, для сварки и гальванопокрытия, применяемые фирмой, обеспечивают высокое качество изделий и гарантируют их многолетнюю эксплуатацию.</p>
             <p>Коллекция 2009 года содержит много инноваций, в т.ч. механизмы Soft Stop и Soft Stop plus обеспечивающие плавную доводку колонок при закрытии: а также антискользящее покрытие Anti Slip для вращающихся элементов: принципиально новый механизм для угловых тумб "REVO" "Le Mans",  "Волшебный уголок" и "Бутылочница-150" нового поколения, выкатные ёмкости для хозпринодлежностей "PORTERO". </p>
             <p>Семейное предприятие KESSEBÖHMER GmbH было основано в 1954 году, сейчас на нем занято около 1750 сотрудников. Это ведущий поставщик монтажных систем и фурнитуры для производителей кухонной мебели по всему миру.</p>
-            <a href="http://www.kesseboehmer.com/en/">www.kesseboehmer.com</a>
+            <a href="http://www.kesseboehmer.com/en/" rel="nofollow">www.kesseboehmer.com</a>
           </article>
 
           <article>
@@ -142,7 +142,7 @@
               <img src="img/brand5.png">
             </div>
             <p><strong>Blum </strong>- это международное  предприятие, специализирующееся на производстве мебельной фурнитуры. Основными направлениями производства являются подъемные механизмы, системы выдвижения и петли для мебели. Фурнитура этой компании обеспечивает комфорт на кухне на протяжении многих лет. </p>
-            <a href="http://www.blum.com/by/ru/">www.blum.com</a>
+            <a href="http://www.blum.com/by/ru/" rel="nofollow">www.blum.com</a>
           </article>
         </div>
       </section>
@@ -153,7 +153,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="kitchens.html">Каталог</a></li>
                 <li><a href="o_fabrike.html">О фабрике</a></li>         
                 <li><a href="o_salone.html">О салоне</a></li>
                 <li><a href="brands.html">Бренды</a></li>
