--- a/index.html
+++ b/index.html
@@ -97,18 +97,6 @@
           <div class="item active">
             <a href="discounts.html">
               <img src="img/slide1.jpg" alt="slide1">
-               <div class="carousel-caption">
-                <div class="caption_block">
-                  <div class="caption_up_block text-right">
-                    <h2>Новогодняя</h2>
-                    <h1>Акция!</h1>
-                  </div>
-                  <div class="caption_down_block">
-                    <p class="big_discounts">скидки <strong>10-20%</strong></p>
-                    <p>на модели <b>арли, симона, эстель</b></p>
-                  </div>
-                </div>
-               </div>
             </a>
           </div>
          <div class="item">
@@ -218,7 +206,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="kitchens.html">Каталог</a></li>
                 <li><a href="o_fabrike.html">О фабрике</a></li>         
                 <li><a href="o_salone.html">О салоне</a></li>
                 <li><a href="brands.html">Бренды</a></li>
