--- a/o_fabrike.html
+++ b/o_fabrike.html
@@ -99,7 +99,9 @@
 
         <div class="row">
           <article class="o_fabrike_article">
-            <div class="fabrik_img_wrapper"><img src="img/o_fabrice.jpg"></div>
+            <div class="fabrik_img_wrapper">
+              <a href="img/o_fabrice.jpg" class="fancy_picture" rel="factory" title="Sample title 1"><img src="img/o_fabrice.jpg"></a>
+            </div>
             <h1>Фабрика "Геосидеал"</h1>
             <p>Мебельная фабрика "Геосидеал" начала свою деятельность в 1991 году. Основное направление фабрики - производство кухонь высокого качества с использованием натуральной древесины в качестве фасадов и декоративных элементов. Представительства фабрики есть также в Москве, Санкт-Петербурге и Воронеже.</p>
             <p>Сегодня фабрика располагает высокотехнологичным оборудованием ведущих фирм Европы.</p>
@@ -132,7 +134,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="kitchens.html">Каталог</a></li>
                 <li><a href="o_fabrike.html">О фабрике</a></li>         
                 <li><a href="o_salone.html">О салоне</a></li>
                 <li><a href="brands.html">Бренды</a></li>
