--- a/one_seat.html
+++ b/one_seat.html
@@ -97,7 +97,7 @@
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
             <nav class="aside_navigation">
               <div class="catalog_list">
-                <p class="btn_catalog active"><a href="kitchens.html">Кухни</a></p>
+                <p class="btn_catalog"><a href="kitchens.html">Кухни</a></p>
               </div>
               <div class="catalog_list">
                <p class="btn_catalog">столовые группы<span class="caret_span"><img src="img/arrow.png"></span></p>
@@ -107,14 +107,14 @@
                 </div>
               </div>
               <div class="catalog_list">
-                <p class="btn_catalog">Комплектующие<span class="caret_span"><img src="img/arrow.png"></span></p>
+                <p class="btn_catalog active">Комплектующие<span class="caret_span"><img src="img/arrow.png"></span></p>
                 <div class="list_nav">
                  <p class="list-item"><a href="table_ups.html">Столешницы из постформинга</a></p>
                  <p class="list-item"><a href="table_ups.html">Столешницы из композита кварца</a></p>
                  <p class="list-item"><a href="one_seat.html">Плинтус</a></p>
                  <p class="list-item"><a href="one_seat.html">Каркас</a></p>
                  <p class="list-item"><a href="one_seat.html">Цоколь</a></p>
-                 <p class="list-item"><a href="one_seat.html">Карниз</a></p>
+                 <p class="list-item active"><a href="one_seat.html">Карниз</a></p>
                  <p class="list-item"><a href="one_seat.html">Ручки</a></p>
                  <p class="list-item"><a href="one_seat.html">Менсолодержатели</a></p>
                 </div>
@@ -174,7 +174,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="kitchens.html">Каталог</a></li>
                 <li><a href="o_fabrike.html">О фабрике</a></li>         
                 <li><a href="o_salone.html">О салоне</a></li>
                 <li><a href="brands.html">Бренды</a></li>
