--- a/product.html
+++ b/product.html
@@ -246,7 +246,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="kitchens.html">Каталог</a></li>
                 <li><a href="o_fabrike.html">О фабрике</a></li>         
                 <li><a href="o_salone.html">О салоне</a></li>
                 <li><a href="brands.html">Бренды</a></li>
