--- a/seats.html
+++ b/seats.html
@@ -96,13 +96,13 @@
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
             <nav class="aside_navigation">
               <div class="catalog_list">
-                <p class="btn_catalog active"><a href="kitchens.html">Кухни</a></p>
+                <p class="btn_catalog"><a href="kitchens.html">Кухни</a></p>
               </div>
               <div class="catalog_list">
-               <p class="btn_catalog">столовые группы<span class="caret_span"><img src="img/arrow.png"></span></p>
+               <p class="btn_catalog active">столовые группы<span class="caret_span"><img src="img/arrow.png"></span></p>
                 <div class="list_nav">
                   <p class="list-item"><a href="tables.html">столы</a></p>
-                  <p class="list-item"><a href="seats.html">стулья</a></p>
+                  <p class="list-item active"><a href="seats.html">стулья</a></p>
                 </div>
               </div>
               <div class="catalog_list">
@@ -208,7 +208,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="kitchens.html">Каталог</a></li>
                 <li><a href="o_fabrike.html">О фабрике</a></li>         
                 <li><a href="o_salone.html">О салоне</a></li>
                 <li><a href="brands.html">Бренды</a></li>
