--- a/product.html
+++ b/product.html
@@ -35,7 +35,7 @@
           <address class="address">
             <p><strong>Адрес:</strong> <b>ТЦ "Grad", 3-й этаж, пав. 367</b></p>
 
-            <p><a href="img/schema.jpg" class="fancy_picture" rel="schema" title="Как  нас найти">Схема этажа</a></p>
+            <p><a href="img/schema2.jpg" class="fancy_picture" rel="schema2" title="Как  нас найти">Схема этажа</a></p>
             <p><strong>Время работы:</strong> 10.00 - 17.00</p>
             <p><strong>Выходной</strong>: понедельник</p>
           </address>
